Revert "Bruker oppgitt aktivitetsgrad (#11139)" (#11149)
This reverts commit ae83d7ebb107e3ccc1ee2c21ae10b01c577aefd0.